[package]
name = "ws-tunnel"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.26"
tokio-tungstenite = "0.16.1"

[dependencies.tokio]
version = "1.16.1"
default-features = false
features = ["macros", "rt", "rt-multi-thread", "net"]
