[package]
name = "ws-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.26"
tungstenite = "0.16.0"
libc = "0.2.116"

[dependencies.tokio]
version = "1.16.1"
default-features = false
features = ["macros", "rt", "rt-multi-thread", "net"]

[dependencies.tokio-tungstenite]
version = "0.16.1"
features = [ "native-tls" ]
